# comcrawl

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  comcrawl_cache.sqlite  pyproject.toml  setup.cfg
.github/workflows/: cd-test-pypi.yml  cd.yml  ci-cd.yml  ci.yml
comcrawl/: __init__.py  search.py  search_index.py
comcrawl/api/: __init__.py  download.py  search.py
comcrawl/config/: default_indexes.txt
comcrawl/core/: __init__.py  index_client.py
comcrawl/types/: __init__.py  types.py
comcrawl/utils/: __init__.py  _download_multiple_results.py  _download_single_result.py  _fetch_available_indexes.py  _search_multiple_indexes.py  _search_single_index.py  download.py  download_single_result.py  initialization.py  multithreading.py  search.py  search_single_index.py
examples/: basic.py  drop_duplicates.py
scripts/: lint.sh  publish-test.sh
tasks/: format.sh  lint.sh  test.sh
tests/: test_comcrawl.py
tests/comcrawl/core/: test_index_client.py
tests/comcrawl/utils/: test_download.py  test_download_multiple_results.py  test_download_single_result.py  test_fetch_available_indexes.py  test_initialization.py  test_multithreading.py  test_search.py  test_search_multiple_indexes.py  test_search_single_index.py
tests/comcrawl/utils/snapshots/: snap_test_download.py  snap_test_download_multiple_results.py  snap_test_download_single_result.py  snap_test_search.py  snap_test_search_multiple_indexes.py  snap_test_search_single_index.py
tests/snapshots/: snap_test_comcrawl.py
