[tool.poetry]
name = "comcrawl"
version = "0.1.0"
description = ""
authors = ["Michael Harms <michaelharms95@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
pandas = "^0.25.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
bandit = "^1.6.2"
mypy = "^0.761"
pycodestyle = "^2.5.0"
pylint = "^2.4.4"
autopep8 = "^1.4.4"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
