[tool.poetry]
name = "comcrawl"
version = "1.0.1"
description = "A python utility for downloading Common Crawl data."
authors = ["Michael Harms <michaelharms95@icloud.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/michaelharms/comcrawl"
repository = "https://github.com/michaelharms/comcrawl"
keywords = ["commoncrawl", "machine-learning", "nlp", "data", "common-crawl", "scraping", "deep-learning", "training-dataset"]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed"
]
include = [
  "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
bandit = "^1.6.2"
mypy = "^0.761"
pycodestyle = "^2.5.0"
pylint = "^2.4.4"
autopep8 = "^1.4.4"
pytest-cov = "^2.8.1"
snapshottest = "^0.5.1"
pandas = "^0.25.3"
pydocstyle = "^5.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
